# experiments-2026-jbhi-DTAs-for-FL

./: .env  .gitignore  CHANGELOG.md  LICENSE  package-lock.json  pyproject.toml  release.config.js
plotters/: analyze-patients.py  count-labels.py  plot_results.py
src/: DT.py  DTAggregate.py  FLServer.py  LearningConfig.py  Monitors.py  RetrainingPolicy.py  main.py  simulator.py  utils.py
